--- a/maven-release-aar.gradle
+++ b/maven-release-aar.gradle
@@ -14,13 +14,21 @@ uploadArchives {
     repositories.mavenDeployer {
         //这里就是最后输出地址，在自己电脑上新建个文件夹，把文件夹路径粘贴在此
         //注意”file://“ + 路径，有三个斜杠，别漏了
-        repository(url: "file://${projectDir}/maven")
+        // repository(url: "file://${projectDir}/maven")
+        repository(url: uri("./maven"))
 
-        pom.project {
+        /*pom.project {
             groupId project.PUBLISH_GROUP_ID
             artifactId project.PUBLISH_ARTIFACT_ID
             version project.PUBLISH_VERSION
-        }
+        }*/
+
+        // repository(url: "https://github.com/Ygh-Googol/Star/releases") {
+        //     authentication(userName: "820858929@qq.com", password: "GoodLife@123")
+        // }
+        pom.groupId = "com.star"// 唯一标识（通常为模块包名，也可以任意）
+        pom.artifactId = "Star" // 项目名称（通常为类库模块名称，也可以任意）
+        pom.version = "1.0.0" // 版本号
     }
 }
 
@@ -29,6 +37,7 @@ uploadArchives {
 task androidSourcesJar(type: Jar) {
     classifier = 'sources'
     from android.sourceSets.main.java.sourceFiles
+    // from android.sourceSets.main.java.srcDirs
 }
 
 artifacts {
